<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aero Toolbox</string>

    <string name="atmosphere_title">Standard Atmosphere</string>
    <string name="oblique_title">Oblique Shock</string>
    <string name="expansion_title">Prandtl-Meyer Expansion</string>
    <string name="normal_title">Normal Shock</string>
    <string name="isentropic_title">Isentropic Flow</string>
    <string name="reynolds_title">Reynolds Number</string>

    <string name="height">h</string>
    <string name="pressure">P</string>
    <string name="temperature">T</string>
    <string name="density">\u03C1</string>
    <string name="viscosity">\u03BC</string>

    <string name="Mach">Mach</string>
    <string name="p_ratio">P/Pt</string>
    <string name="t_ratio">T/Tt</string>
    <string name="a_ratio">A/A<sup>*</sup></string>
    <string name="rho_ratio">\u03C1/\u03C1t</string>

    <string name="Mach1">M1</string>
    <string name="Mach2">M2</string>
    <string name="t21_static_ratio">T2/T1</string>
    <string name="p21_total_ratio">Pt2/Pt1</string>
    <string name="p21_static_ratio">P2/P1</string>
    <string name="p21_ts_ratio">Pt2/P1</string>
    <string name="v21_ratio">V2/V1</string>
    <string name="rho12_ratio">\u03C12/\u03C11</string>

    <string-array name="normal_array">
        <item name="Mach1">M1</item>
        <item name="Mach2">M2</item>
        <item name="p21_static_ratio">P2/P1</item>
        <item name="p21_total_ratio">Pt2/Pt1</item>
        <item name="p21_ts_ratio">Pt2/P1</item>
        <item name="t21_static_ratio">T2/T1</item>
        <item name="v21_ratio">\u03C12/\u03C11,V1/V2</item>
    </string-array>

    <string-array name="atmosphere_title_array">
        <item name="atmosphere_english_label">English Units</item>
        <item name="atmosphere_metric_label">Metric Units</item>
        <item name="atmosphere_ratio_label">Ratios</item>
    </string-array>

    <string-array name="atmosphere_array">
        <item name="height">h</item>
        <item name="pressure">p</item>
        <item name="temperature">T</item>
        <item name="density">\u03C1</item>
        <item name="mu">mu</item>
        <item name="a">a</item>
    </string-array>

    <string-array name="atmosphere_ratio_array">
        <item name="pressure_ratio">p ratio</item>
        <item name="temperature_ratio">T ratio</item>
        <item name="density_ratio">\u03C1 ratio</item>
    </string-array>


    <string name="M1">M1</string>
    <string name="delta">\u03b4</string>
    <string name="theta">\u03b8</string>
    <string name="nu">\u03bd</string>

    <string-array name="oblique">
        <item>M1, \u03b8</item>
        <item>M1, \u03b4</item>
        <item>\u03b4, \u03b8</item>
    </string-array>

    <string-array name="expansion">
        <item>M1, \u03bd</item>
        <item>M2, \u03bd</item>
        <item>M1, M2</item>
    </string-array>

    <string-array name="expansion_array">
        <item name="Mach1">M1</item>
        <item name="Mach2">M2</item>
        <item>\u03bd1</item>
        <item>\u03bd2</item>
        <item>\u03bd offset</item>
    </string-array>

    <string-array name="oblique_array">
        <item name="Mach1">M1</item>
        <item name="Mach2">M2</item>
        <item name="delta">\u03b4</item>
        <item name="theta">\u03b8</item>
        <item name="delta_max">\u03b4<sub>max</sub></item>
        <item name="P_ratio">P2/P1</item>
        <item name="T_ratio">T2/T1</item>
        <item name="rho_ratio">\u03C12/\u03C11</item>
    </string-array>

    <string-array name="density">
        <item>kg/m<sup>3</sup></item>
        <item>slug/ft<sup>3</sup></item>
        <item>lbm/ft<sup>3</sup></item>
    </string-array>
    <string-array name="velocity">
        <item>m/s</item>
        <item>ft/s</item>
        <item>in/s</item>
    </string-array>
    <string-array name="temperature">
        <item>K</item>
        <item>\u00B0C</item>
        <item>\u00B0R</item>
        <item>\u00B0F</item>
    </string-array>
    <string-array name="viscosity">
        <item>Pa &#8226; s</item>
        <item>lb &#8226; s/ft<sup>2</sup></item>
    </string-array>
    <string-array name="length">
        <item>m</item>
        <item>ft</item>
        <item>in</item>
    </string-array>
    <string-array name="pressure">
        <item>Pa</item>
        <item>psi</item>
        <item>psf</item>
    </string-array>
</resources>