<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.


<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/article"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textSize="18sp" />
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/normal_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/radio_normal">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_mach"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_pressure"
                        android:layout_weight="1" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_temperature"
                        android:layout_weight="1" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_density"
                        android:layout_weight="1" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_area"
                        android:layout_weight="1" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_density2"
                        android:layout_weight="1" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_area2"
                        android:layout_weight="1" />
                </RadioGroup>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Mach1"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Mach2"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/p21_static_ratio"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:text="@string/p21_total_ratio"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/p21_ts_ratio"
                        android:textSize="16sp"
                        android:gravity="bottom"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:text="@string/t21_static_ratio"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:text="@string/rho12_ratio"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/normal_mach_input"
                        android:layout_gravity="right" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/normal_pressure_input"
                        android:layout_gravity="right" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/normal_temperature_input"
                        android:layout_gravity="right" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/normal_density_input"
                        android:layout_gravity="right" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/normal_area_input"
                        android:layout_gravity="right" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/normal_density_input2"
                        android:layout_gravity="right" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/normal_area_input2"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Calculate"
                    android:id="@+id/normal_calculate"
                    android:layout_centerInParent="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/normal_label"
                    android:textSize="16sp"
                    android:paddingBottom="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/normal_mach_output"
                    android:textSize="16sp"
                    android:paddingBottom="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/normal_pressure_output"
                    android:textSize="16sp"
                    android:paddingBottom="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/normal_temperature_output"
                    android:textSize="16sp"
                    android:paddingBottom="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/normal_density_output"
                    android:textSize="16sp"
                    android:paddingBottom="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/normal_area_output"
                    android:textSize="16sp"
                    android:paddingBottom="8dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
